--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "repository": {
+    "type": "git", 
+    "url": "https://github.com/Lookou823/special-format-character-converter"
+  },
+  
   "name": "special-format-character-converter",
   "displayName": "special-format-character-converter",
   "description": "One that can help you solve character format processing problems encountered in daily code development, such as underline splicing of phrases, all capital letters of phrases, etc.",
